Fixed navbar in CMS, fixed sidebar and z-indexes

--- a/services/cms/src/styles/Gutenberg/style.scss
+++ b/services/cms/src/styles/Gutenberg/style.scss
@@ -46,6 +46,8 @@
   height: auto;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
+  z-index: 9001;
+  background-color: white;
 
   // Temporarily disable the sidebar on mobile
   // Do we want to support advanced content editing with a mobile phone?
